# itoyori

./: .gitignore  CMakeLists.txt  machinefile  rerun_example  run_example
benchmarks/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  fib.cpp  log.h  mandelbrot.cpp  my_fib.cpp  nbody.cpp  nqueens.cpp  test.cpp
include/ityr/: ityr.hpp
include/ityr/common/: mpi_rma.hpp  mpi_util.hpp
include/ityr/ito/arch/: x86_64.hpp
include/ityr/ito/sched/: randws.hpp
include/ityr/pattern/: root_exec.hpp
logs/: fib.out_0.txt  fib.out_1.txt  fib.out_2.txt  fib.out_3.txt  fib_prof_stats._0.txt  fib_prof_stats._1.txt  fib_prof_stats._2.txt  fib_prof_stats._3.txt
tests/: CMakeLists.txt
